# lilygo-epd47-rs

./: .gitignore  Cargo.toml  build.rs  command.sh  sdkconfig.defaults.esp32.s3
.cargo/: config.toml
examples/: battery.rs  counter.rs  deepsleep.rs  grayscale.rs  hello-world.rs  minimal_test.rs  screen-repair.rs  simple.rs
slint-chat-epd47/: Cargo.toml  build.rs  chat.slint  sdkconfig.defaults
slint-chat-epd47/.cargo/: config.toml
slint-chat-epd47/src/: epd47_idf.rs  epd_platform.rs  main.rs  message_handler.rs
slint-chat-epd47/ui/: chat.slint
src/: display.rs  ed047tc1.rs  graphics.rs  lib.rs  rmt.rs
