[package]
name = "slint-chat-epd47"
version = "0.1.0"
edition = "2021"
authors = ["Chat Port Developer"]
description = "Slint-based ChatGPT clone for LilyGO EPD47 e-paper display"
license = "GPL-3.0"
resolver = "2"
rust-version = "1.80"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
espidf = []                                                # Add the missing espidf feature

[dependencies]
anyhow = "1"
log = { version = "0.4", default-features = false }

# ESP-IDF - using the same pattern as the working project
esp-idf-svc = { version = "0.51", default-features = false }
embedded-svc = { version = "0.28", default-features = false }
embedded-hal = { version = "1.0" }

# Graphics libraries
embedded-graphics = "0.8.1"
embedded-graphics-core = { version = "0.4.0" }

# Slint UI framework - using the same features as the working project
slint = { version = "1.10", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }

# Math support
portable-atomic = { version = "1", features = ["float"] }
num-traits = { version = "0.2.16", default-features = false, features = [
    "libm",
] }

[build-dependencies]
embuild = "0.33"
slint-build = { version = "1.10", features = ["sdf-fonts"] }
